Website_Health_Check/terraform/security_group.tf
# =========================
# ALB Security Group
# =========================

resource "aws_security_group" "alb" {
  name        = "website-alb-sg"
  description = "Allow HTTP traffic from Internet"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "website-alb-sg"
  }
}

# =========================
# EC2 Security Group
# =========================

resource "aws_security_group" "ec2" {
  name        = "website-ec2-sg"
  description = "Allow website traffic only from ALB"
  vpc_id      = aws_vpc.main.id

  ingress {
    description     = "HTTP from ALB"
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb.id]
  }

  egress {
    description = "Allow outbound Internet through NAT"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "website-ec2-sg"
  }
}
